Added readme file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pandas
-streamlit
-requests
-rapidfuzz
-sentence-transformers
-numpy
-scikit-learn
+streamlit==1.29.0
+pandas==2.1.3
+requests==2.31.0
+pinecone-client==3.0.0
+python-dotenv==1.0.0
+numpy==1.26.2
